@@ -3,15 +3,17 @@ Hash: SHA256
 
 DIST chaco-4.3.0.tar.gz 12312403 SHA256 8c7863cf7956c44eaed2d44766026d941322b43bc72a01a0c431fb7a6495c004 SHA512 44642ed0531c8f181349d720c9c5c3f4a83bbc13da79a67a90c8ace3d4974c7e757534d88e6110fca5ab2cceb6b311a8198b8a76d1e5edb9f789898ba61d6ca8 WHIRLPOOL 2253511978c31fd1cc1fe7f51e44006c1aaf21508947432dbabf188bdbd0700bc129e266ef785d94029cffb937752c16df45e7f2be3e2b5fd79f8960753e7c49
 DIST chaco-4.4.1.tar.gz 406469 SHA256 a607565393bdc669d5d8fb992a5338eb9a6c1f69c1b50460dee7193dd8b9533d SHA512 6720e57b0744632a43f18f0f8cbee65836fa4cabd3a5d4aeb9ecca1e89204ce801012577b911738a2719d8978416457990ded0b929222271633193726c5d9f28 WHIRLPOOL c377b682220d03ed53bcbd5cb2f0743220ccea949e065aa21f528954fba795b6dc0f3a7cfccd86cda8767bde58072eba08c1bd8aaddc1aa3800be711bf09b528
+DIST chaco-4.5.0.tar.gz 409562 SHA256 809674bdbdaf1a363b180366c6eaa70d9c49aa2c93b1933ee5c481e0a072da9c SHA512 66e1d82bbbf74e143e42f92eec7c83abc6f0eef488629947422a8ab2140a5a5bacf0f4e2a79f2acb8670417c9a620c9e85f295729525e011b8a09a1ff916e8c6 WHIRLPOOL 4e1187fc6cf1fa7aa3b4b86ec5d3d10917067303614615cce225aa90194ced492ea0d0e99a1088fa48959bb5fabae3e44545fde10754802a1cc2b21ffbafc342
 EBUILD chaco-4.3.0-r1.ebuild 2077 SHA256 2033b34e6d37b7c1c244790af61d58ce905cad4901099ad6c867ae3b12203d07 SHA512 0ac46745e2c336902f6cbfb459afb0de301d7c5946dd4e3ec5c0b8cb154f882ca51ebefdfaa01d8477f31eba8f4464b9a29515730784ac47266bf87ec446a3c0 WHIRLPOOL c7647305e1873474d108d6427f936b0b6fc7929f4ea8e9097af9a4c6a8f270be44e5a42f207d50d40b69387564560a6f637e2b48bea4b053b283035c691d1368
 EBUILD chaco-4.3.0.ebuild 1395 SHA256 987919ff177b9f18d6320343e64fdaea2ccdb3e48f33ba8bccff3fb72d8f7884 SHA512 8609263816a4a071b4114f6ad305a29227092980653c11a16e9d4962a5dd1edfd67842451bfb6087d616348d0fd3b5174d8f590b67889d7152339129032986ff WHIRLPOOL 0e79c5a854219cf144ed7b06659268657ccf7aae9b00781f79a7bd1d7607b2e6df0012b7f7572675ed8b791044bdcadba8ad44b85f8e77f9ccba8483b1b089df
 EBUILD chaco-4.4.1.ebuild 953 SHA256 eea014ecd45ba6dfd07e29b9614e177396445ea117455ba2156e03b73433ad55 SHA512 540c5113d61bf89af1c530e6a95c86bc75858756913721d6dc769a68dc2a399733de39dd30a3fe2a1466774b7c613faed0cdc3e4a6c0a82e655e1ad846a65993 WHIRLPOOL 6d75d22128fd6203fe04ffa75080981dd3308c96989e5206ed91d6e7c73d27d348ac26540d19777fe897fbc3f329f0d0c537b13d0915921bfe379385876ebf12
-MISC ChangeLog 3086 SHA256 7902c57d54ccdf16d090c28c611d77b3e3b4b221be0194e2299ead2a8f161a31 SHA512 04bf8b75d2e32844ee7e8a8d9688b47f87ba321d090880589735129be77169eb704e05ec6edb324b88b25421f2320d9e07aa63295454ba6a47ca0f0a442bf4c8 WHIRLPOOL a6ba72467ef7ce2a964150801f1f8789862d7b14651923f55bce621b3a702dcdd30b34443b3f7ca44e244047712b57f0f91c009aec22ee01c44972cc69051dec
+EBUILD chaco-4.5.0.ebuild 1008 SHA256 0899bbc34df2d3a90feea40acc1032b454c398a04d95981b686e80d46654f3b0 SHA512 63bb1b29357cc9fcb8cceebec68366b43013c07507073d627725491f4cb4765eab8b89e983cc957abe8a8b544ec5813832b14a0d1f29a146edf8c71905f8e1ae WHIRLPOOL cb0d1b53a71319fc2d2a08ac34821280dc1e26786cdcfe568ec0803de8d85bc317dc39cffce4aee9d599abfec35dc7d61ffbd9bffcd3034039e8ec5ca5a8b8d4
+MISC ChangeLog 3263 SHA256 b47947f5398d3fb2c6eaec0867c79f21a4b7225b3befda3d7dc336b962e7c1e7 SHA512 39c785f4a26543f0721ec60f3bb316cdb038833056ce283124bdf81aff778939750d30be94138d1f8822f701b2e3e2b70257de021e3bb26e56b4bb5c8b0ad1b2 WHIRLPOOL eb655baef62e004e1905bb12f04a65412da3589e55bd7d37c75f07442c471d8d952ca40d918bf20aae8caa2d1bbbb46ec566a03ea9fb219e3317df25ea06187a
 MISC metadata.xml 770 SHA256 68ba779d19cf2f7f90e028d93c51252d75d4da6667f090ee0df17ba4c36085c8 SHA512 4f6b4c4c2cb0dcb6106e59a4064dce76cc6e0cc9c19e8d5c98ca5ceae27ae98a502fb2f972f1ef6e20f8e502eefa2bfcefedb9d3f869ceae7ee246da046b24f6 WHIRLPOOL a410ff546613d71b15d86ca7a801eb08c92960e918967269afa9ca4477710b2a4448db6ab020aedfbd31574082ee06c6ce12be91de8b7abb250e29bf62e545ba
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlLpPNgACgkQ1ycZbhPLE2AeRgCggQ7Vqf3zbfDsrf11cqh+AxJp
-1skAni1BO62KfVTtN2xQG92oV+UdO71v
-=yuQw
+iEYEAREIAAYFAlRm2RQACgkQso7CE7gHKw303ACeNkQ4ne7VbMxr1c1NZbBE1dz/
+X7wAoMeI3aL2ZmGObkN6Hn0uXrPSY6Ai
+=UIVg
 -----END PGP SIGNATURE-----
